--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -1,5 +1,10 @@
+certifi==2024.8.30
+charset-normalizer==3.4.0
 colorzero==2.0
 gpiozero==2.0.1
+idna==3.10
+requests==2.32.3
 RPi.GPIO==0.7.1
 smbus2==0.5.0
+urllib3==2.2.3
 websockets==14.1
